Fix responsive
- Rework light theme
- Revert background on navbar (overlaps scrollbar again, but items
  don't come along all by themselves now)

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -105,10 +105,10 @@ body {
         // &:last-child {}
 
         a {
-          text-decoration: none;
+          text-decoration: underline;
 
           &:hover {
-            text-decoration: underline;
+            text-decoration: none;
           }
         }
 
@@ -132,12 +132,15 @@ body {
         position: fixed;
         display: flex;
 
-        li a {
+        li a, li a:visited {
           display: inline-block;
           padding: 1em;
           width: 100%;
+          text-decoration: underline;
 
-          // &:hover {}
+          &:hover {
+            text-decoration: none;
+          }
         }
 
         ol {
@@ -218,6 +221,19 @@ body {
       display: flex;
       flex-flow: row nowrap;
       justify-content: center;
+
+      @media screen and (max-width: 1499px) {
+        flex-flow: column wrap;
+
+        aside .toc {
+          position: static;
+        }
+
+        aside, article {
+          width: 100%;
+          max-width: 100%;
+        }
+      }
 
       .lonely {
         width: 100%;
